# webapp-template

./: .env.example  .eslintrc.json  .gitignore  README.md  package.json  turbo.json
.github/: pull_request_template.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  deploy.yml  security-scan.yml
api/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/src/: config.py  database.py  dependencies.py  main.py
api/src/models/: __init__.py  user.py
api/src/routers/: auth.py  health.py  users.py
api/src/schemas/: auth.py  user.py
api/src/services/: auth.py  users.py
api/tests/: conftest.py
api/tests/integration/: test_auth_routes.py  test_users_routes.py
api/tests/unit/: test_auth_service.py  test_users_service.py
app/: .dockerignore  Dockerfile  app.py  db.py  package.json  requirements.txt  wsgi.py
app/src/: index.js  index.test.js
app/tests/: test_app.py
apps/api/: Dockerfile  Dockerfile.dev  package.json  vitest.config.ts  vitest.integration.config.ts
apps/api/prisma/: seed.ts  (+1 more)
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
cf/: README.md  dns.yml  ecr.yml  ecs.yml  iam-github-oidc.yml  network.yml  tags.json
cf/parameters/: production.json  staging.json
docker/: docker-compose.yml
infra/: README.md
infra/cloudformation/: app-runner.yml  dynamodb.yml  ecr.yml
scripts/: bootstrap-tf-backend.sh  db-migrate.sh  deploy.sh  setup-github-secrets.sh  setup-local.sh
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
(+42 files in other folders)
